# piiscrub

./: LICENSE  README.md  pyproject.toml  requirements.txt
cleanslate/: __init__.py  cli.py  core.py  patterns.py
piiscrub/: __init__.py  cli.py  core.py  patterns.py  profiles.py  validators.py
tests/: test_batch.py  test_cli.py  test_core.py  test_structured.py  test_validators.py
